fix another misalignment + embed

--- a/static/darzacharts/css/style.css
+++ b/static/darzacharts/css/style.css
@@ -71,7 +71,6 @@ a {
 .navbar-brand {margin-left: 0px; margin-right: 0px}
 
 .navbar-text {
-    padding-top: 1.5rem;
     margin-left: 0px; 
     margin-right: 0px;
     font-size: 32px;
